// +bili:type=service
// Code generated by warden.
syntax = "proto3";

package location.service;


option go_package = "api";

message InfoReply { 
    string addr = 1;
    string country = 2;
    string province = 3;
    string city = 4;
    string isp = 5;
    double latitude = 6;
    double longitude = 7;
    int64 zone_id = 8;
}

message InfoReq { 
    string addr = 2;
}

service Location { 
    // Info get ip info. 
    rpc Info(InfoReq) returns(InfoReply); 
}
